# python

./: .env  OpenAI.ipynb  chain.ipynb  github-recovery-codes.txt  pyproject.toml  requirement.txt  requirements.txt
.ipynb_checkpoints/: OpenAI-checkpoint.ipynb
app/: Food listing.docx  indian-food-recipes.docx  main.py
app/pages/: search-query.py
assets/: OpenAI.ipynb  ~$dian-food-recipes.docx
assets/.ipynb_checkpoints/: LangChain Cookbook Part 1 - Fundamentals-checkpoint.ipynb  chain-checkpoint.ipynb
ui/: main.py
ui/pages/: 1_ai-chat.py  2_bhashini.py  2_jugalbandi.py  3_search-query.py  4_pinecone.py
